lots of messing around

--- a/app/elements/learn/step-block.html
+++ b/app/elements/learn/step-block.html
@@ -1,14 +1,12 @@
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../paper-styles/shadow.html">
-
 <dom-module id="step-block">
   <style>
 
-
   </style>
   <template>
-  <h1>{{ title }}</h1>
-  <content></content>
+  <paper-material elevation="1" class="paper-font-body2">
+    <h2>{{ title }}</h2>
+      <content></content>
+  </paper-material>
   </template>
 </dom-module>
 <script>
