--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -29,8 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="my-list/my-list.html">
-<link rel="import" href="learn/step-block.html">
-<link rel="import" href="learn/zooming-image.html">
+<link rel="import" href="learn/elements.html">
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
