--- a/app/lesson.html
+++ b/app/lesson.html
@@ -8,13 +8,20 @@
   </script>
   <link rel="import" href="elements/elements.html">
   <style type="text/css">
-  narrative-text {
+  /* Eventually this will migrate to an external CSS file */
+  narrative-text { 
+    /* Does narrative-text need to be a polymer/web component? 
+       Or if it is just a matter of CSS, can we get away with a custom element name
+       and corresponding CSS selectors?
+     **/
     font-family: "Roboto Light", sans-serif;
   }
   </style>
 </head>
-<body class="fullbleed layout vertical">
+<body class="fullbleed layout vertical"> <!-- Don't really know the details of these Material/Polymer classes -->
+
 <lesson-banner image="/images/learn/basic-website-banner.png" title="Create a Basic Website"></lesson-banner>
+
 <paper-material>
 
 <narrative-text>
