link index to lesson page

--- a/app/index.html
+++ b/app/index.html
@@ -111,12 +111,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <section data-route="home">
 
               <paper-material elevation="1" class="paper-font-body2">
-                <step-block title="Setup: something or other">
-  <p>You don't want your web files mixing with the rest of your things. Put this folder somewhere you can find it easily.</p>
-  <zooming-image src="images/learn/mac-screenshot.png"></zooming-image>
-  <p>what do files and folders have to do with websites?</p>
-
-                </step-block>
+                <p>For now, leaving the "polymer starter kit" index page mostly intact.
+                You may be looking for the <a href="lesson.html">Prototype lesson.</a></p>
               </paper-material>
 
 
