--- a/app/elements/learn/capsule-reference.html
+++ b/app/elements/learn/capsule-reference.html
@@ -2,9 +2,13 @@
 
 `capsule-reference` is a labeled image which triggers to a modal "capsule" explanation of a concept. In our prototype example, capsule-references appear in the "what you'll need" block and explain more about text editors and FTP programs. The element is intended to be empty, and all necessary variable data is specified in attributes.
 
-TK: a pointer to the actual capsule, an icon button,  and behavior to bring it onto the page. Figure out if it is actually all part of this component or if this component and the actual capsule are just different views on the same model instance. 
+TK: 
+  * Fix label so that it's integrated with the image.
+  * add the button. At the moment, https://elements.polymer-project.org/elements/paper-fab seems like a good starting point.
+  * implement behavior to show the capsule
+  * Figure out if it is actually all part of this component or if this component and the actual capsule are just different views on the same model instance. 
 
-At the moment, https://elements.polymer-project.org/elements/paper-fab seems like a good starting point for the icon button.
+ for the icon button.
 
 Example:
 
