--- a/app/elements/learn/lesson-block.html
+++ b/app/elements/learn/lesson-block.html
@@ -13,6 +13,8 @@ Example:
 -->
 <dom-module id="lesson-block">
   <style>
+  ::content { clear: both; }
+
   ::content .content-wrapper {
     background-color: #FFF7E8;
     padding: 25px;
