--- a/app/lesson.html
+++ b/app/lesson.html
@@ -36,10 +36,10 @@ You'll need to get started
 </h2>
 <div>
 <capsule-reference image="images/learn/text-editor.png" label="Text Editor"></capsule-reference>
-<!-- <capsule-reference image="images/learn/ftp-program.png" label="FTP Program"></capsule-reference>
- -->  
+<capsule-reference image="images/learn/ftp-program.png" label="FTP Program"></capsule-reference>
 </div>
 </lesson-block>
+<div style="clear: both"></div>
 <step-block title="Setup: Create a Folder">
 Here are the details of today's lesson.
 </step-block>
