--- a/app/elements/learn/step-block.html
+++ b/app/elements/learn/step-block.html
@@ -1,9 +1,50 @@
+<!--
+
+`step-block` is a container that shows one of several steps in a typical lesson. It generally 
+can contain any HTML. Each `step-block` should have a `title` attribute. Step blocks also 
+have step numbers-at this time, the goal is to have the numbers automatically applied. It 
+might make sense to build them around `ol` (ordered list) tags, but if there are any elements
+that interrupt the steps, maintaining numbering continuity could be a hassle. Thinking about
+making something count them and apply numbering at page load time.
+
+Example:
+
+    <lesson-block>
+      ... content ...
+    </lesson-block>
+
+@group Learn Elements
+@class lesson-block
+-->
 <dom-module id="step-block">
   <style>
   ::content { clear: both; }
 
+  h2 {
+    color: #338D83;
+    font-family: Roboto;
+    font-weight: bold;
+
+  }
+
+  paper-material {
+    padding: 10px;
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  step-number {
+    color: #ffffff;
+    background-color: #80CBC4;
+    padding: 50px;
+    border-radius: 50%;
+    font-family: Roboto;
+    font-weight: 500;
+  }
+
   </style>
   <template>
+  <step-number>{{ stepnum }}</step-number>
   <paper-material elevation="1" class="paper-font-body2">
     <h2>{{ title }}</h2>
       <content></content>
@@ -14,40 +55,48 @@
   Polymer({
     is: 'step-block',
 
+    attached: function() {
+      this.async(function() {
+        var steps = 0;
+        var kids = this.parentNode.children;
+        for (var i = 0; i < kids.length; i++) {
+          if (kids[i].nodeName == this.nodeName) {
+            steps += 1;
+            if (kids[i] === this) {
+              this.stepnum = steps;
+              break;
+            }            
+          }
+        };
+
+        console.log('attached',this);
+        window.stash = this;
+      })
+    },
+
     properties: {
+        /**
+         * The primary label for this step.
+         *
+         * @attribute title
+         * @type number
+         * @default 1
+        elevation: {
+          type: Number,
+          reflectToAttribute: true,
+          value: 1
+        },
+         */
         title: {
             type: String,
             value: "You forgot to specify the title."
+        },
+
+        stepnum: {
+            type: Number,
+            value: 0
         }
 
-      /**
-       * The z-depth of this element, from 0-5. Setting to 0 will remove the
-       * shadow, and each increasing number greater than 0 will be "deeper"
-       * than the last.
-       *
-       * @attribute elevation
-       * @type number
-       * @default 1
-      elevation: {
-        type: Number,
-        reflectToAttribute: true,
-        value: 1
-      },
-       */
-
-      /**
-       * Set this to true to animate the shadow when setting a new
-       * `elevation` value.
-       *
-       * @attribute animated
-       * @type boolean
-       * @default false
-      animated: {
-        type: Boolean,
-        reflectToAttribute: true,
-        value: false
-      }
-       */
     }
   });
 </script>
