--- a/app/elements/learn/step-block.html
+++ b/app/elements/learn/step-block.html
@@ -2,10 +2,7 @@
 
 `step-block` is a container that shows one of several steps in a typical lesson. It generally 
 can contain any HTML. Each `step-block` should have a `title` attribute. Step blocks also 
-have step numbers-at this time, the goal is to have the numbers automatically applied. It 
-might make sense to build them around `ol` (ordered list) tags, but if there are any elements
-that interrupt the steps, maintaining numbering continuity could be a hassle. Thinking about
-making something count them and apply numbering at page load time.
+have step numbers which are computed based on the number of `step-block` elements with the same parent before the current. This seems better than building upon an `ol` because it will support other components like `lesson-block` mixed among steps.
 
 Example:
 
@@ -79,19 +76,23 @@ Example:
          * The primary label for this step.
          *
          * @attribute title
-         * @type number
-         * @default 1
-        elevation: {
-          type: Number,
-          reflectToAttribute: true,
-          value: 1
-        },
+         * @type String
+         * @default ""
          */
         title: {
             type: String,
-            value: "You forgot to specify the title."
+            value: ""
         },
 
+        /**
+         * The position of this step among all steps. Not meant to be set by users,
+         * at the moment it gets set at page load time by analyzing all other steps
+         * with the same parent.
+         *
+         * @attribute title
+         * @type String
+         * @default ""
+         */
         stepnum: {
             type: Number,
             value: 0
