Lesson Block and Capsule fixed up, still need to add button

--- a/app/lesson.html
+++ b/app/lesson.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8"> 
+  <meta charset="UTF-8">
   <title>Create a Basic Website -- Learn.knightlab.com</title>
 
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js">
@@ -9,8 +9,8 @@
   <link rel="import" href="elements/elements.html">
   <style type="text/css">
   /* Eventually this will migrate to an external CSS file */
-  narrative-text { 
-    /* Does narrative-text need to be a polymer/web component? 
+  narrative-text {
+    /* Does narrative-text need to be a polymer/web component?
        Or if it is just a matter of CSS, can we get away with a custom element name
        and corresponding CSS selectors?
      **/
@@ -27,16 +27,16 @@
 <narrative-text>
 <p>It’s the most common reason students walk into Knight Lab for the first time—they want to build some kind of website. Building your own gives you complete control over what that site looks like… but starting from scratch can be overwhelming. It’s hard to know what to Google, when.</p>
 
-<p>So we’ve done some of that work for you. Build a Basic Website outlines the path from start to finish. Head straight down for the fastest of walkthroughs; meander for a deeper explanation of why we’re making these choices. 
+<p>So we’ve done some of that work for you. Build a Basic Website outlines the path from start to finish. Head straight down for the fastest of walkthroughs; meander for a deeper explanation of why we’re making these choices.
 </p>
 </narrative-text>
 <lesson-block>
 <h2>
-You'll need to get started  
+You'll need to get started
 </h2>
-<div>
-<capsule-reference image="images/learn/text-editor.png" label="Text Editor"></capsule-reference>
-<capsule-reference image="images/learn/ftp-program.png" label="FTP Program"></capsule-reference>
+<div style="display:flex">
+<capsule-reference image="images/learn/text-editor.png" label="Text Editor" style="padding-right: 25px"></capsule-reference>
+<capsule-reference image="images/learn/ftp-program.png" label="FTP Program" style="padding-right: 25px"></capsule-reference>
 </div>
 </lesson-block>
 <div style="clear: both"></div>
