--- a/app/elements/learn/capsule-reference.html
+++ b/app/elements/learn/capsule-reference.html
@@ -2,11 +2,11 @@
 
 `capsule-reference` is a labeled image which triggers to a modal "capsule" explanation of a concept. In our prototype example, capsule-references appear in the "what you'll need" block and explain more about text editors and FTP programs. The element is intended to be empty, and all necessary variable data is specified in attributes.
 
-TK: 
+TK:
   * Maybe this shouldn't be a paper element. Maybe that's why it doesn't "fill up" the containing block?
   * add the button. At the moment, https://elements.polymer-project.org/elements/paper-fab seems like a good starting point.
   * implement behavior to show the capsule
-  * Figure out if it is actually all part of this component or if this component and the actual capsule are just different views on the same model instance. 
+  * Figure out if it is actually all part of this component or if this component and the actual capsule are just different views on the same model instance.
 
  for the icon button.
 
@@ -21,10 +21,12 @@ Example:
 <dom-module id="capsule-reference">
   <style>
   ::content .wrapper {
-    display: inline;
+    flex-direction: row | row-reverse | column
     width: 344px;
     float: left;
-    margin-right: 25px;
+    /*margin-right: 10px; */
+    /* padding-right: 25px; */
+    background-color: white;
   }
 
   ::content .wrapper p {
@@ -35,11 +37,13 @@ Example:
     padding: 2px 0 0 15px;
   }
 
+
   </style>
   <template>
   <paper-material elevation="1" class="wrapper paper-font-body2">
   <div class="wrapper">
     <img src="{{ image }}">
+    <!-- <paper-icon-button icon="content-copy" style="position: relative"></paper-icon-button> -->
     <p>{{ label }}</p>
   </div>
   </paper-material>
