--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -104,6 +104,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     margin-left: 48px;
   }
 
+  #capsule-reference {
+    order: <integer>;
+  }
+
   /* Height of the scroll area */
   .content {
     height: 900px;
