Work in progress

--- a/app/lesson.html
+++ b/app/lesson.html
@@ -37,6 +37,7 @@ You'll need to get started
 <div style="display:flex">
 <capsule-reference image="images/learn/text-editor.png" label="Text Editor" style="padding-right: 25px"></capsule-reference>
 <capsule-reference image="images/learn/ftp-program.png" label="FTP Program" style="padding-right: 25px"></capsule-reference>
+<paper-fab></paper-fab>
 </div>
 </lesson-block>
 <div style="clear: both"></div>
