--- a/app/elements/learn/elements.html
+++ b/app/elements/learn/elements.html
@@ -2,4 +2,4 @@
 <link rel="import" href="lesson-block.html">
 <link rel="import" href="zooming-image.html">
 <link rel="import" href="lesson-banner.html">
-<link rel="import" href="capsule-reference.html">
+<link rel="import" href="capsulex.html">
