--- a/app/lesson.html
+++ b/app/lesson.html
@@ -35,29 +35,14 @@
 You'll need to get started
 </h2>
 <div style="display:flex">
-<capsule-reference image="images/learn/text-editor.png" label="Text Editor" style="padding-right: 25px"></capsule-reference>
-<capsule-reference image="images/learn/ftp-program.png" label="FTP Program" style="padding-right: 25px"></capsule-reference>
-<paper-fab></paper-fab>
+<capsule image="images/learn/text-editor.png" label="Text Editor" style="padding-right: 25px"></capsule>
+<capsule image="images/learn/ftp-program.png" label="FTP Program" style="padding-right: 25px"></capsule>
 </div>
 </lesson-block>
 <div style="clear: both"></div>
 <step-block title="Setup: Create a Folder">
-<p>You don't want your web files mixing with the rest of your things. Put this folder somewhere you can find it easily.</p>
-<div>
-  <h2>What do files and folders have to do with websites?</h2>
-  <p>A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!</p>
-</div>
-<zooming-image src="/images/learn/mac-screenshot.png"></zooming-image>
+Here are the details of today's lesson.
 </step-block>
-
-<step-block title="Setup: Create an HTML document">
-<p>In your text editor, create a new file (file > new). Save it as "index.html" in the folder you just created.</p>
-</step-block>
-
-<step-block title="Write some">
-<p>To create a website, you’ll need to start with an HTML file.</p>
-</step-block>
-
 </paper-material>
 </body>
 </html>
