--- a/app/lesson.html
+++ b/app/lesson.html
@@ -35,8 +35,8 @@
 You'll need to get started
 </h2>
 <div style="display:flex">
-<capsule image="images/learn/text-editor.png" label="Text Editor" style="padding-right: 25px"></capsule>
-<capsule image="images/learn/ftp-program.png" label="FTP Program" style="padding-right: 25px"></capsule>
+<capsule-unit image="images/learn/text-editor.png" label="Text Editor" style="padding-right: 25px"></capsule-unit>
+<capsule-unit image="images/learn/ftp-program.png" label="FTP Program" style="padding-right: 25px"></capsule-unit>
 </div>
 </lesson-block>
 <div style="clear: both"></div>
