--- a/app/elements/learn/capsule-unit.html
+++ b/app/elements/learn/capsule-unit.html
@@ -43,7 +43,8 @@ Example:
   <paper-material elevation="1" class="wrapper paper-font-body2">
   <div class="wrapper">
     <img src="{{ image }}">
-    <paper-icon-button icon="content-copy" style="position: relative"></paper-icon-button>
+    <!-- <paper-icon-button icon="content-copy" style="position: relative"></paper-icon-button> -->
+    
     <p>{{ label }}</p>
   </div>
   </paper-material>
