--- a/app/lesson.html
+++ b/app/lesson.html
@@ -26,7 +26,7 @@
 
 <narrative-text>
 <p>It’s the most common reason students walk into Knight Lab for the first time—they want to build some kind of website. Building your own gives you complete control over what that site looks like… but starting from scratch can be overwhelming. It’s hard to know what to Google, when.</p>
-
+<paper-fab icon="save" mini class="green" on-click="{{saveButtonClick}}"></paper-fab>
 <p>So we’ve done some of that work for you. Build a Basic Website outlines the path from start to finish. Head straight down for the fastest of walkthroughs; meander for a deeper explanation of why we’re making these choices.
 </p>
 </narrative-text>
@@ -44,5 +44,6 @@ You'll need to get started
 Here are the details of today's lesson.
 </step-block>
 </paper-material>
+
 </body>
 </html>
