--- a/app/elements/learn/lesson-block.html
+++ b/app/elements/learn/lesson-block.html
@@ -18,7 +18,8 @@ Example:
   ::content .content-wrapper {
     background-color: #FFF7E8;
     padding: 25px;
-
+    margin-left: 50px;
+    margin-right: 50px;
   };
 
   ::content .content-wrapper h2 { /* Free floating for any h2 inside */
