--- a/app/elements/learn/elements.html
+++ b/app/elements/learn/elements.html
@@ -3,3 +3,4 @@
 <link rel="import" href="zooming-image.html">
 <link rel="import" href="lesson-banner.html">
 <link rel="import" href="capsule-unit.html">
+<link rel="import" href="info-block.html">
