Placed a commented info-block for testing

--- a/app/lesson.html
+++ b/app/lesson.html
@@ -22,14 +22,18 @@
 
 <lesson-banner image="/images/learn/basic-website-banner.png" title="Create a Basic Website"></lesson-banner>
 
-<paper-material>
+<paper-material display="flex">
 
 <narrative-text>
 <p>It’s the most common reason students walk into Knight Lab for the first time—they want to build some kind of website. Building your own gives you complete control over what that site looks like… but starting from scratch can be overwhelming. It’s hard to know what to Google, when.</p>
-<paper-fab icon="save" mini class="green" on-click="{{saveButtonClick}}"></paper-fab>
 <p>So we’ve done some of that work for you. Build a Basic Website outlines the path from start to finish. Head straight down for the fastest of walkthroughs; meander for a deeper explanation of why we’re making these choices.
 </p>
 </narrative-text>
+
+<!-- <info-block title="What do files and folders have to do with websites?">
+A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!
+</info-block> -->
+
 <lesson-block>
 <h2>
 You'll need to get started
@@ -42,6 +46,9 @@ You'll need to get started
 <div style="clear: both"></div>
 <step-block title="Setup: Create a Folder">
 Here are the details of today's lesson.
+</step-block>
+</step-block title="Setup: Create an HTML document">
+In your text editor, create a new file (file > new). Save it as "index.html" in the folder you just created.
 </step-block>
 </paper-material>
 
