--- a/app/lesson.html
+++ b/app/lesson.html
@@ -51,6 +51,10 @@ You'll need to get started
   <p>A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!</p>
 </div>
 <zooming-image src="/images/learn/mac-screenshot.png"></zooming-image>
+<info-block image="images/learn/info-icon.png">
+  <h2>What do files and folders have to do with websites</h2>
+  <p>A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!</p>
+</info-block>
 </step-block>
 
 <step-block title="Setup: Create an HTML document">
@@ -59,9 +63,6 @@ You'll need to get started
 
 <step-block title="Write some">
 <p>To create a website, you’ll need to start with an HTML file.</p>
-</step-block>
-</step-block title="Setup: Create an HTML document">
-In your text editor, create a new file (file > new). Save it as "index.html" in the folder you just created.
 </step-block>
 </paper-material>
 
