--- a/app/lesson.html
+++ b/app/lesson.html
@@ -50,7 +50,10 @@ You'll need to get started
   <h2>What do files and folders have to do with websites?</h2>
   <p>A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!</p>
 </div>
+<p style="display: flex; flex-direction: row;">
 <zooming-image src="/images/learn/mac-screenshot.png"></zooming-image>
+<zooming-image src="/images/learn/pc-screenshot.png"></zooming-image>
+</p>
 <info-block image="images/learn/info-icon.png">
   <h2>What do files and folders have to do with websites</h2>
   <p>A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!</p>
