use right instead of left to position paper-fab

--- a/app/elements/learn/capsule-unit.html
+++ b/app/elements/learn/capsule-unit.html
@@ -24,8 +24,6 @@ Example:
     flex-direction: row | row-reverse | column
     width: 344px;
     float: left;
-    /*margin-right: 10px; */
-    /* padding-right: 25px; */
     background-color: white;
   }
 
@@ -48,7 +46,7 @@ Example:
   <paper-material elevation="1" class="wrapper paper-font-body2">
   <div class="wrapper" style="position:relative">
     <img src="{{ image }}">
-    <paper-fab icon="content-copy" on-click="{{console.log(Success!)}}" style="position:absolute;z-index:999;left:265px;bottom:30px"></paper-fab>
+    <paper-fab icon="content-copy" on-click="{{console.log(Success!)}}" style="position:absolute;z-index:999;right:25px;bottom:30px"></paper-fab>
     <p>{{ label }}</p>
   </div>
   </paper-material>
