flex-direction doesn't take piped values; sloppy copy/paste

--- a/app/elements/learn/capsule-unit.html
+++ b/app/elements/learn/capsule-unit.html
@@ -21,9 +21,8 @@ Example:
 <dom-module id="capsule-unit">
   <style>
   ::content .wrapper {
-    flex-direction: row | row-reverse | column
+    flex-direction: row | row-reverse | column;
     width: 344px;
-    float: left;
     background-color: white;
   }
 
