--- a/app/elements/learn/step-block.html
+++ b/app/elements/learn/step-block.html
@@ -56,7 +56,7 @@ Example:
 
   content-wrapper {
     display: flex;
-    flex-direction: row | row-reverse | column;
+    flex-direction: row;
   }
 
   content-wrapper div {
