change wrapper class since encapsulation is less reliable -- background color was being overridden by info-block

--- a/app/elements/learn/lesson-block.html
+++ b/app/elements/learn/lesson-block.html
@@ -15,21 +15,21 @@ Example:
   <style>
   ::content { clear: both; }
 
-  ::content .content-wrapper {
+  ::content .lesson-block-wrapper {
     background-color: #FFF7E8;
     padding: 25px;
     margin-left: 50px;
     margin-right: 50px;
   };
 
-  ::content .content-wrapper h2 { /* Free floating for any h2 inside */
+  ::content .lesson-block-wrapper h2 { /* Free floating for any h2 inside */
     color: #E3B052;
 
   }
   </style>
   <template>
   <paper-material elevation="1" class="paper-font-body2">
-    <div class="content-wrapper">
+    <div class="lesson-block-wrapper">
       <content></content>
     </div>
   </paper-material>
