WIP on lesson-reference

--- a/app/elements/learn/elements.html
+++ b/app/elements/learn/elements.html
@@ -4,3 +4,4 @@
 <link rel="import" href="lesson-banner.html">
 <link rel="import" href="capsule-unit.html">
 <link rel="import" href="info-block.html">
+<link rel="import" href="lesson-reference.html">
