--- a/app/lesson.html
+++ b/app/lesson.html
@@ -30,10 +30,6 @@
 </p>
 </narrative-text>
 
-<!-- <info-block title="What do files and folders have to do with websites?">
-A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!
-</info-block> -->
-
 <lesson-block>
 <h2>
 You'll need to get started
@@ -64,8 +60,18 @@ You'll need to get started
 <p>In your text editor, create a new file (file > new). Save it as "index.html" in the folder you just created.</p>
 </step-block>
 
-<step-block title="Write some">
+<step-block title="Write some HTML">
 <p>To create a website, you’ll need to start with an HTML file.</p>
+<lesson-reference title="Basic HTML" image="/images/learn/source-code.png">
+<p>
+In this standalone lesson, we'll hit on the rules and regulations for writing solid HTML, as well as the top tags you’re likely to use. Head into this standalone lesson for a better understanding of how to markup your content.  
+</p>
+</lesson-reference>
+
+<info-block image="images/learn/info-icon.png">
+  <h2>HTML (HyperText Markup Language)</h2>
+  <p>HTML is the backbone of the web, and the beginning of any website. To break that down: “Hypertext” means the document contains text that has links to other text, like stylesheets or scripts, for example. “Markup Language” is a way of formatting a file so that it distinguishes between content and structure—it “marks up” the text to make it easy for the browser to tell which words it should display on the screen, vs. those that are there to tell it how to structure the page.</p>
+</info-block>
 </step-block>
 </paper-material>
 
