--- a/app/elements/learn/info-block.html
+++ b/app/elements/learn/info-block.html
@@ -15,30 +15,50 @@ Example:
   <style>
   ::content { clear: both; }
 
-  ::content .content-wrapper {
+  ::content .info-content-wrapper {
     background-color: #F5F4F4;
     padding: 25px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 15px;
+    margin-right: 15px;
   };
-  /*
-  .content-wrapper h2 {
+
+  .info-content-wrapper h2 {
    color: #263238;
    float: right;
  }
 
-  .content-wrapper p {
+  .info-content-wrapper p {
    color: #9B9B9B;
    float: right;
  }
- */
 
+  .clearfix {
+     overflow: auto;
+ }
 
+  img {
+    float: left;
+    padding-top: 50px;
+  }
+
+/*
+  p {
+    float: right;
+    padding-left: 15px;
+  }
+
+  h2{
+    flo
+    color: #263238;
+  }
+*/
   </style>
   <template>
   <paper-material elevation="0" class="paper-font-body2">
-    <div class="content-wrapper">
-      <img src="{{ image }}">
+    <div class="info-content-wrapper">
+      <div class="image-wrapper">
+        <img src="{{ image }}">
+      </div>
       <content></content>
     </div>
   </paper-material>
