--- a/app/elements/learn/step-block.html
+++ b/app/elements/learn/step-block.html
@@ -24,7 +24,7 @@ Example:
 -->
 <dom-module id="step-block">
 	<style>
-		::content { clear: both; }
+		/*::content { clear: both; }*/
 
 		h2 {
 			color: #338D83;
@@ -52,9 +52,6 @@ Example:
 
 		content-wrapper {
 			display: flex;
-			/*flex-direction: row;*/
-			display: flex;
-			/*margin: 0 auto;*/
 			align-items: center;
 			justify-content: center;
 		}
