--- a/app/lesson.html
+++ b/app/lesson.html
@@ -1,73 +1,90 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Create a Basic Website -- Learn.knightlab.com</title>
+	<head>
+		<meta charset="UTF-8">
+		<title>Create a Basic Website -- Learn.knightlab.com</title>
 
-  <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js">
-  </script>
-  <link rel="import" href="elements/elements.html">
-  <style type="text/css">
-  /* Eventually this will migrate to an external CSS file */
-  narrative-text {
-    /* Does narrative-text need to be a polymer/web component?
-       Or if it is just a matter of CSS, can we get away with a custom element name
-       and corresponding CSS selectors?
-     **/
-    font-family: "Roboto Light", sans-serif;
-  }
-  </style>
-</head>
-<body class="fullbleed layout vertical"> <!-- Don't really know the details of these Material/Polymer classes -->
+		<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js">
+		</script>
+		<link rel="import" href="elements/elements.html">
+		<style type="text/css">
+			/* Eventually this will migrate to an external CSS file */
+			narrative-text {
+				/* Does narrative-text need to be a polymer/web component?
+				Or if it is just a matter of CSS, can we get away with a custom element name
+				and corresponding CSS selectors?
+				**/
+				font-family: "Roboto Light", sans-serif;
+			}
+		</style>
+	</head>
 
-<lesson-banner image="/images/learn/basic-website-banner.png" title="Create a Basic Website"></lesson-banner>
+	<body class="fullbleed layout vertical"> <!-- Don't really know the details of these Material/Polymer classes -->
 
-<paper-material display="flex">
+		<lesson-banner image="/images/learn/basic-website-banner.png" title="Create a Basic Website"></lesson-banner>
 
-<narrative-text>
-<p>It’s the most common reason students walk into Knight Lab for the first time—they want to build some kind of website. Building your own gives you complete control over what that site looks like… but starting from scratch can be overwhelming. It’s hard to know what to Google, when.</p>
-<p>So we’ve done some of that work for you. Build a Basic Website outlines the path from start to finish. Head straight down for the fastest of walkthroughs; meander for a deeper explanation of why we’re making these choices.
-</p>
-</narrative-text>
+		<paper-material display="flex">
 
-<!-- <info-block title="What do files and folders have to do with websites?">
-A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!
-</info-block> -->
+			<narrative-text>
+				<p>
+					It’s the most common reason students walk into Knight Lab for the first time—they want to build some kind of website. Building your own gives you complete control over what that site looks like… but starting from scratch can be overwhelming. It’s hard to know what to Google, when.
+				</p>
+				<p>
+					So we’ve done some of that work for you. Build a Basic Website outlines the path from start to finish. Head straight down for the fastest of walkthroughs; meander for a deeper explanation of why we’re making these choices.
+				</p>
+			</narrative-text>
 
-<lesson-block>
-<h2>
-You'll need to get started
-</h2>
-<div style="display:flex">
-<capsule-unit image="images/learn/text-editor.png" label="Text Editor" style="padding-right: 25px"></capsule-unit>
-<capsule-unit image="images/learn/ftp-program.png" label="FTP Program" style="padding-right: 25px"></capsule-unit>
-</div>
-</lesson-block>
-<div style="clear: both"></div>
-<step-block title="Setup: Create a Folder">
-<p>You don't want your web files mixing with the rest of your things. Put this folder somewhere you can find it easily.</p>
-<div>
-  <h2>What do files and folders have to do with websites?</h2>
-  <p>A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!</p>
-</div>
-<p style="display: flex; flex-direction: row;">
-<zooming-image src="/images/learn/mac-screenshot.png"></zooming-image>
-<zooming-image src="/images/learn/pc-screenshot.png"></zooming-image>
-</p>
-<info-block image="images/learn/info-icon.png">
-  <h2>What do files and folders have to do with websites</h2>
-  <p>A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!</p>
-</info-block>
-</step-block>
+			<!-- <info-block title="What do files and folders have to do with websites?">
+			A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!
+			</info-block> -->
 
-<step-block title="Setup: Create an HTML document">
-<p>In your text editor, create a new file (file > new). Save it as "index.html" in the folder you just created.</p>
-</step-block>
+			<lesson-block>
+				<h2>
+					You'll need to get started
+				</h2>
+				<div style="display:flex">
+					<capsule-unit image="images/learn/text-editor.png" label="Text Editor" style="padding-right: 25px"></capsule-unit>
+					<capsule-unit image="images/learn/ftp-program.png" label="FTP Program" style="padding-right: 25px"></capsule-unit>
+				</div>
+			</lesson-block>
 
-<step-block title="Write some">
-<p>To create a website, you’ll need to start with an HTML file.</p>
-</step-block>
-</paper-material>
+			<div style="clear: both"></div>
 
-</body>
+			<step-block title="Setup: Create a Folder">
+				<p>
+					You don't want your web files mixing with the rest of your things. Put this folder somewhere you can find it easily.
+				</p>
+				<div>
+					<h2>What do files and folders have to do with websites?</h2>
+					<p>
+						A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!
+					</p>
+				</div>
+				<p style="display: flex; flex-direction: row;">
+					<zooming-image src="/images/learn/mac-screenshot.png"></zooming-image>
+					<zooming-image src="/images/learn/pc-screenshot.png"></zooming-image>
+				</p>
+				<info-block image="images/learn/info-icon.png">
+					<h2>What do files and folders have to do with websites</h2>
+					<p>
+						A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!
+					</p>
+				</info-block>
+			</step-block>
+
+			<step-block title="Setup: Create an HTML document">
+				<p>
+					In your text editor, create a new file (file > new). Save it as "index.html" in the folder you just created.
+				</p>
+			</step-block>
+
+			<step-block title="Write some">
+				<p>
+					To create a website, you’ll need to start with an HTML file.
+				</p>
+			</step-block>
+
+		</paper-material>
+
+	</body>
 </html>
