--- a/app/elements/learn/capsule-unit.html
+++ b/app/elements/learn/capsule-unit.html
@@ -37,6 +37,10 @@ Example:
   paper-fab {
     color: #80CBC4;
     background-color: #273238;
+    right: 25px;
+    bottom: 380px;
+    position: absolute;
+    z-index: 999;
   }
 
 
@@ -45,7 +49,7 @@ Example:
   <paper-material elevation="1" class="wrapper paper-font-body2">
   <div class="capsule-unit-wrapper" style="position:relative">
     <img src="{{ image }}">
-    <paper-fab icon="content-copy" on-click="{{console.log(Success!)}}" style="position:absolute;z-index:999;right:25px;bottom:38px"></paper-fab>
+    <paper-fab icon="content-copy" on-click="{{console.log('Success!')}}"></paper-fab>
     <p>{{ label }}</p>
   </div>
   </paper-material>
