General cleanup and CSS

--- a/app/elements/learn/step-block.html
+++ b/app/elements/learn/step-block.html
@@ -24,7 +24,10 @@ Example:
 -->
 <dom-module id="step-block">
 	<style>
-		/*::content { clear: both; }*/
+		::content { 
+			clear: both;
+
+		}
 
 		h2 {
 			color: #338D83;
@@ -54,6 +57,7 @@ Example:
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			margin-bottom:50px;
 		}
 
 
