--- a/app/lesson.html
+++ b/app/lesson.html
@@ -19,11 +19,11 @@
 		</style>
 	</head>
 
-	<body class="fullbleed layout vertical"> <!-- Don't really know the details of these Material/Polymer classes -->
+	<body class="fullbleed"> <!-- Don't really know the details of these Material/Polymer classes -->
 
 		<lesson-banner image="/images/learn/basic-website-banner.png" title="Create a Basic Website"></lesson-banner>
 
-		<paper-material display="flex">
+		<div>
 
 			<narrative-text>
 				<p>
@@ -84,7 +84,7 @@
 				</p>
 			</step-block>
 
-		</paper-material>
+		</div>
 
 	</body>
 </html>
