--- a/app/elements/learn/lesson-banner.html
+++ b/app/elements/learn/lesson-banner.html
@@ -5,79 +5,80 @@ a `lesson-banner` is the top part of the page. The element is intended to be emp
 For now, trying to implement it as an extension of <paper-header-panel> https://elements.polymer-project.org/elements/paper-header-panel but that's not deeply founded.
 
 TK: 
-  * a hamburger menu for the top left. 
-  * less amateur positioning of the h1#title
-  * the teal filter (#80CBC4)
+	* a hamburger menu for the top left. 
+	* less amateur positioning of the h1#title
+	* the teal filter (#80CBC4)
 
 Example:
 
-    <lesson-banner img="path/to/image.png" label="Label for component">
-    </lesson-banner>
+		<lesson-banner img="path/to/image.png" label="Label for component">
+		</lesson-banner>
 
 @group Learn Elements
 @class lesson-banner
 -->
 
 <dom-module id="lesson-banner">
-  <style>
-    #container {
-      width: 100%;
-      height: 400px;
-      position: relative;
-    }
-    #navigation {
-      background-color: #263238;
-      padding: 10px;
-      color: #80CBC4;
-      font-family: Roboto;
-      font-weight: 500;
-      font-style: italic;
-      font-size: 24px;
-      width: 100%;
-      text-align: center;
-    }
+	<style>
+		#container {
+			width: 100%;
+			height: 200px;
+			overflow:hidden;
+			position:relative;
+		}
+		#navigation {
+			background-color: #263238;
+			padding: 10px;
+			color: #80CBC4;
+			font-family: Roboto;
+			font-weight: 500;
+			font-style: italic;
+			font-size: 24px;
+			width: 100%;
+			text-align: center;
+		}
 
-    #image {
-      position: absolute;
-      left: 0;
-      top: 0;
-    }
-    #title {
-      font-family: Roboto, sans-serif;
-      color: black;
-      font-size: 24px;
-      font-weight: bold;
-      width: 100%;
-      text-align: center;
-      position: absolute;
-      bottom: 140px;
-    }
-  </style>
-  <template>
-    <div id="navigation">
-    <!-- TK: hamburger menu? -->
-    Learn
-    <a href="/index.html"><img src="/images/learn/banner-logo-white.png"></a>
-    </div>
-    <paper-header-panel mode="waterfall-tall">
-      <div id="container" class="paper-header image">
-      <img id='image' src="{{ image }}">
-      <h1 id="title">{{title}}</h1>
-    </paper-header-panel>
-  </template>
+		#image {
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
+		#title {
+			font-family: Roboto, sans-serif;
+			color: black;
+			font-size: 24px;
+			font-weight: bold;
+			width: 100%;
+			text-align: center;
+			position:absolute;
+			bottom:0;
+		}
+	</style>
+	<template>
+		<div id="navigation">
+			<!-- TK: hamburger menu? -->
+			Learn
+			<a href="/index.html"><img src="/images/learn/banner-logo-white.png"></a>
+		</div>
+		
+		<div id="container" class="">
+			<img id='image' src="{{ image }}">
+			<h1 id="title">{{title}}</h1>
+		</div>
+	</template>
 </dom-module>
 <script>
-  Polymer({
-    is: 'lesson-banner',
-    properties: {
-        image: {
-            type: String,
-            value: ""
-        },
-        title: {
-            type: String,
-            value: "Lesson Title"
-        }
-    }
-  });
+	Polymer({
+		is: 'lesson-banner',
+		properties: {
+				image: {
+						type: String,
+						value: ""
+				},
+				title: {
+						type: String,
+						value: "Lesson Title"
+				}
+		}
+	});
 </script>
