--- a/app/elements/learn/lesson-block.html
+++ b/app/elements/learn/lesson-block.html
@@ -4,42 +4,43 @@
 
 Example:
 
-    <lesson-block>
-      ... content ...
-    </lesson-block>
+	<lesson-block>
+	  ... content ...
+	</lesson-block>
 
 @group Learn Elements
 @class lesson-block
 -->
 <dom-module id="lesson-block">
-  <style>
-  ::content { clear: both; }
+	<style>
+		::content { clear: both; }
 
-  ::content .lesson-block-wrapper {
-    background-color: #FFF7E8;
-    padding: 25px;
-    margin-left: 50px;
-    margin-right: 50px;
-  };
+		::content .lesson-block-wrapper {
+			background-color: #FFF7E8;
+			padding: 25px;
+			margin-left: 50px;
+			margin-right: 50px;
+			margin-bottom:50px;
+		};
 
-  ::content .lesson-block-wrapper h2 { /* Free floating for any h2 inside */
-    color: #E3B052;
+		::content .lesson-block-wrapper h2 { /* Free floating for any h2 inside */
+			color: #E3B052;
 
-  }
-  </style>
-  <template>
-  <paper-material elevation="1" class="paper-font-body2">
-    <div class="lesson-block-wrapper">
-      <content></content>
-    </div>
-  </paper-material>
-  </template>
+		}
+	</style>
+	<template>
+		<paper-material elevation="1" class="paper-font-body2">
+			<div class="lesson-block-wrapper">
+				<content></content>
+			</div>
+		</paper-material>
+	</template>
 </dom-module>
 <script>
-  Polymer({
-    is: 'lesson-block',
+	Polymer({
+		is: 'lesson-block',
 
-    properties: {
-    }
-  });
+		properties: {
+		}
+	});
 </script>
